--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   bio: "admin / dev / geek"
   email: jason@green.io
   disqus-shortname:
-  twitter: @jason_green_io
+  twitter: jason_green_io
   facebook: #username
   google:
     plus: #username
