--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            jason.green.io
 locale:           en_US
-url:              jason.green.io
+url:              http://jason.green.io
 
 
 # Jekyll configuration
