--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ owner:
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
   linkedin: #username
   xing: #username
-  instagram: #username
+  instagram: jason_green_io
   lastfm: #username
   tumblr: #username
   pinterest: #username
