--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ owner:
   twitter: jason_green_io
   facebook: #username
   google:
-    plus: #username
-    analytics:
+    plus: jasongreenio
+    analytics: UA-20138763-3
     verify:
     ad-client:
     ad-slot:
