--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ owner:
   foursquare: #username
   steam: #username
   dribbble: #username
-  youtube: #username
+  youtube: jasongreenio
   soundcloud: #username
   weibo: #username
   flickr: #username
